<resources>
    <string name="app_name">FamilyMap</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="join_thousands_of_others_in_learning_your_family_history">Join thousands of others in learning your family history</string>
    <string name="e_mail" />
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">login</string>
    <string name="family_map">Family Map Sign In/Register</string>
    <string name="byline">Join thousands of others in learning your family history!</string>
    <string name="checkbox1">Male</string>
    <string name="checkbox2">Female</string>
    <string name="e_mailAddress">email</string>
    <string name="firstName">first name</string>
    <string name="lastName">last name</string>
    <string name="gender">gender</string>
    <string name="register">register</string>
    <string name="serverHost">server hostname</string>
    <string name="portnum">port number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toastGreeting">welcome user!</string>
    <string name="toastNew">welcome new user!</string>
    <string name="register_failed">Unable to register user</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="mapFragmentMessage">this is where your data will go!</string>
    <string name="personName">namePlaceHolder</string>
    <string name="event">event goes here</string>
    <string name="mapEventData">event goes here</string>
    <string name="mapNameData">name goes here</string>
    <string name="mapDetails">Click on a marker to see information about the event!</string>
    <string name="gender_marker">gender marker</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="genderString">GENDER</string>
    <string name="lastNameString">LAST NAME</string>
    <string name="firstNameString">FIRST NAME</string>
    <string name="eventTitle">LIFE EVENTS</string>
    <string name="familyTitle">FAMILY</string>
    <string name="queryHint">Search for a person or event here</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="show_life_story_lines">SHOW LIFE STORY LINES</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="show_family_tree_lines">SHOW FAMILY TREE LINES</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="fathers_side">Father\'s Side</string>
    <string name="show_fathers_side">FILTER BY FATHER\'S SIDE OF THE FAMILY</string>
    <string name="mothers_side">Mother\'s Side</string>
    <string name="show_mothers_side">FILTER BY MOTHER\'S SIDE OF THE FAMILY</string>
    <string name="filter_male">Male Events</string>
    <string name="show_gender_events">FILTER EVENTS BASED ON GENDER</string>
    <string name="filter_female">Female Events</string>
    <string name="log_out">Log Out</string>
</resources>