<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayout1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="17sp"
                android:text="@string/life_story_lines"
                android:gravity="bottom"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/show_life_story_lines"
                android:gravity="bottom"/>
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
             />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_alignBottom="@id/linearLayout1" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearLayout2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="17sp"
            android:text="@string/family_tree_lines"
            android:gravity="bottom"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/show_family_tree_lines" />
    </LinearLayout>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_alignBottom="@id/linearLayout2" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayout3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="17sp"
                android:text="@string/spouse_lines"
                android:gravity="bottom"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/show_spouse_lines" />
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_alignBottom="@id/linearLayout3" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayout4">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="17sp"
                android:text="@string/fathers_side"
                android:gravity="bottom"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/show_fathers_side" />
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_alignBottom="@id/linearLayout4" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayout5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="17sp"
                android:text="@string/mothers_side"
                android:gravity="bottom"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/show_mothers_side" />
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_alignBottom="@id/linearLayout5" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayout6">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="17sp"
                android:text="@string/filter_male"
                android:gravity="bottom"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/show_gender_events" />
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_alignBottom="@id/linearLayout6" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayout7">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="17sp"
                android:text="@string/filter_female"
                android:gravity="bottom"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/show_gender_events" />
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_alignBottom="@id/linearLayout7" />
    </RelativeLayout>
    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textSize="12sp"
        android:layout_gravity="center"/>

</LinearLayout>